# logs-publisher

./: .env  Cargo.toml  Dockerfile  readme.md
src/: main.rs
