[package]
name = "logs-publisher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Mqtt
paho-mqtt = "0.9"

# Watching file
#hotwatch = "0.4.5"
#crossbeam-channel = "0.4.0"
#notify = "4.0.17"
#linemux = "0.2"
logwatcher = "0.1.1"

#log
log = "0.4.14"

#tokio = { version = "1", features = ["full"] }
